--- a/First_1.ipynb
+++ b/First_1.ipynb
@@ -1,5 +1,33 @@
 {
  "cells": [
+{
+ "cell_type": "markdown",
+ "metadata": {},
+ "source": [
+  "# Introduction: Training a Generative Adversarial Network (GAN) on MNIST\n",
+  "\n",
+  "This notebook implements and trains a **Generative Adversarial Network (GAN)**—a framework introduced by *Goodfellow et al., 2014*—with the goal of generating realistic handwritten digits from the MNIST dataset.\n",
+  "\n",
+  "A GAN consists of two neural networks trained simultaneously in an adversarial setting:\n",
+  "\n",
+  "- **Generator** \\(G(z)\\): maps a latent noise vector \\(z \\sim \\mathcal{N}(0, I)\\) to synthetic images.\n",
+  "- **Discriminator** \\(D(x)\\): outputs a probability that an input image \\(x\\) is real rather than generated.\n",
+  "\n",
+  "The training follows the classical **minimax objective**:\n",
+  "\n",
+  "$$\\min_G \\max_D \\, \\mathbb{E}_{x \\sim p_{\\text{data}}}[\\log D(x)] + \\mathbb{E}_{z \\sim p_z}[\\log (1 - D(G(z)))]$$\n",
+  "\n",
+  "In this notebook, we:\n",
+  "\n",
+  "1. Load and normalize the MNIST dataset.\n",
+  "2. Implement a fully-connected Generator and Discriminator in PyTorch.\n",
+  "3. Train both networks through adversarial optimization.\n",
+  "4. Visualize generated samples to track model progression.\n",
+  "\n",
+  "This provides a clean and instructive implementation of the foundational GAN framework.\n"
+ ]
+},
+
   {
    "cell_type": "code",
    "execution_count": 71,
