Update introduction header in GAN notebook

--- a/Generative Adversarial Network.ipynb
+++ b/Generative Adversarial Network.ipynb
@@ -4,7 +4,7 @@
  "cell_type": "markdown",
  "metadata": {},
  "source": [
-  "# Introduction: Training a Generative Adversarial Network (GAN) on MNIST\n",
+  "# Training a Generative Adversarial Network (GAN) on MNIST\n",
   "\n",
   "This notebook implements and trains a **Generative Adversarial Network (GAN)**—a framework introduced by *Goodfellow et al., 2014*—with the goal of generating realistic handwritten digits from the MNIST dataset.\n",
   "\n",
